--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -52,7 +52,17 @@ body.down header.clone {
 }
 
 .ie-hd-style {
-    justify-content: flex-start;
+    //justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
+
+    #logo {
+        height: 50px;
+        max-width: 100%;
+        @include mq(lg) {
+            max-width: 35%;
+        }
+    }
     
     .menu,
     .telephone {
@@ -62,7 +72,7 @@ body.down header.clone {
     @include mq(sm) {
         .menu,
         .telephone {
-            margin: 0 2em;
+            margin: 0 2rem;
         }
         @include mq(med) {
             .support,
@@ -76,19 +86,18 @@ body.down header.clone {
 }
 
 #logo {
-    width: 100px;
     flex-grow: 1;
-    max-width: 400px;
+    width: 100px;
     height: auto;
+    max-width: 400px;
     max-height: 70px;
     cursor: pointer;
     @include mq(med){
-        height: 100%;
         flex-basis: 45%;
         margin-bottom: 0;
         margin-right: 2em;
         @include mq(lg) {
-            margin-right: 3em;
+           margin-right: 3em;
         }
     }
 }
@@ -159,7 +168,7 @@ body.down header.clone {
     }
 }
 
-//IE support for la yout
+//IE support for service card grid
 .ie-service-grid {
     @include ie-service-card-layout();
 }
@@ -372,7 +381,9 @@ footer {
 }
 //footer end
 
+//
 //contact us
+//
 .contact-container {
     @include mq(lg) {
         .contact-form form{
